--- a/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
@@ -4,24 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>\n",
+    "<span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
     "<center><em>Video : 105 - 0 Opening And Reading Files And Folders  Python Os Module-1 </em></center>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Opening and Reading Files"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "So far we've discussed how to open files manually, one by one. Let's explore how we can open files programatically. "
    ]
@@ -29,7 +30,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "source": [
     "_____"
@@ -38,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -56,37 +60,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Review: Understanding File Paths ."
+    "# Review: Understanding File Paths ."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "pwd"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Create Practice File ."
+    "# Create Practice File ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f = open('practicefile.txt','w')"
@@ -95,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -115,36 +122,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f.close()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will begin by creating a practice text file that we will be using for demonstration."
    ]
@@ -155,7 +145,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Getting Directories ."
+    "# Getting Directories ."
    ]
   },
   {
@@ -228,7 +218,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Listing Files In A Directory ."
+    "# Listing Files In A Directory ."
    ]
   },
   {
@@ -283,7 +273,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Moving Files ."
+    "# Moving Files ."
    ]
   },
   {
@@ -426,7 +416,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Deleting Files ."
+    "# Deleting Files  Send2trash ."
    ]
   },
   {
@@ -456,7 +446,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Walking through a directory ."
+    "# Walking through a directory ( getcwd and listdir)."
    ]
   },
   {
@@ -613,37 +603,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Notes"
    ]
@@ -651,8 +612,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "source": [
     "___\n",
