--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,8 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "80db93af",
+   "id": "0f3b9ba1",
    "metadata": {},
+   "source": [
+    "# Typical Heading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13d86594",
+   "metadata": {},
+   "source": [
+    "<span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
+    "<center><em>Video : 105 - 0 Opening And Reading Files And Folders  Python Os Module-1 </em></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c39ea6",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Different colors"
    ]
@@ -11,7 +31,9 @@
   {
    "cell_type": "markdown",
    "id": "2c1c39e9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Blue color heading"
    ]
@@ -19,7 +41,9 @@
   {
    "cell_type": "markdown",
    "id": "1389d750",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style='color:DarkBlue'> Blue is my favorite color.  </span>"
    ]
@@ -27,7 +51,9 @@
   {
    "cell_type": "markdown",
    "id": "e605ce3b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style='color:Maroon'> Maroon heading  </span>  Sample."
    ]
@@ -36,14 +62,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "03a6f9a8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "44a93ca7",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Heading Styles , Page title"
    ]
@@ -52,7 +82,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "98a76402",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -77,7 +109,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "2e2293e3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -95,7 +129,9 @@
   {
    "cell_type": "markdown",
    "id": "f30fde95",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Formatting Guide\n",
     "\n",
@@ -106,7 +142,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f65bda66",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -114,7 +152,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f2382e31",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
