--- a/12-Advanced Python Modules/ExcerciseAndNotes/00-Collections-Module.ipynb
+++ b/12-Advanced Python Modules/ExcerciseAndNotes/00-Collections-Module.ipynb
@@ -981,7 +981,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -995,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
