--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f3b9ba1",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Typical Heading"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13d86594",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
     "<h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
@@ -20,7 +22,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c39ea6",
    "metadata": {
     "heading_collapsed": true
    },
@@ -30,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c1c39e9",
    "metadata": {
     "hidden": true
    },
@@ -40,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1389d750",
    "metadata": {
     "hidden": true
    },
@@ -50,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e605ce3b",
    "metadata": {
     "hidden": true
    },
@@ -61,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a6f9a8",
    "metadata": {
     "hidden": true
    },
@@ -70,7 +67,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a93ca7",
    "metadata": {
     "heading_collapsed": true
    },
@@ -81,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98a76402",
    "metadata": {
     "hidden": true
    },
@@ -108,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e2293e3",
    "metadata": {
     "hidden": true
    },
@@ -128,7 +122,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f30fde95",
    "metadata": {
     "hidden": true
    },
@@ -141,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65bda66",
    "metadata": {
     "hidden": true
    },
@@ -151,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2382e31",
    "metadata": {
     "hidden": true
    },
@@ -160,7 +151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5cd4541",
    "metadata": {
     "heading_collapsed": true
    },
@@ -170,7 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4a1202",
    "metadata": {
     "hidden": true
    },
@@ -183,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259e44e5",
    "metadata": {
     "hidden": true
    },
@@ -193,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5768aa0f",
    "metadata": {
     "hidden": true
    },
@@ -202,7 +189,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3afd25fe",
    "metadata": {
     "heading_collapsed": true
    },
@@ -212,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bc3827e",
    "metadata": {
     "heading_collapsed": true
    },
@@ -222,7 +207,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14bf204c",
    "metadata": {
     "hidden": true
    },
@@ -237,7 +221,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e1e727",
    "metadata": {
     "hidden": true
    },
@@ -246,7 +229,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af933ba4",
    "metadata": {
     "heading_collapsed": true
    },
@@ -256,7 +238,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e10dbe",
    "metadata": {
     "hidden": true
    },
@@ -324,7 +305,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c081347",
    "metadata": {
     "hidden": true
    },
@@ -334,7 +314,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "642f6de7",
    "metadata": {
     "hidden": true
    },
@@ -344,7 +323,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab852b8",
    "metadata": {
     "hidden": true
    },
@@ -354,7 +332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
