--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -229,18 +229,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Adding HTML Information "
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "<table>\n",
     "\n",
@@ -305,27 +308,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Increase the cell width of the Jupyter/ipython notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/21971449/how-do-i-increase-the-cell-width-of-the-jupyter-ipython-notebook-in-my-browser\n",
+    "\n",
+    "If you don't want to change your default settings, \n",
+    "and you only want to change the width of the current notebook you're working on,\n",
+    "you can enter the following into a cell:\n",
+    "\n",
+    "    from IPython.display import display, HTML\n",
+    "    display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "    \n",
+    "For permanent solution visit the above link"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
