--- a/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/ExcerciseAndNotes/01-Opening-and-Reading-Files-Folders.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,17 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current path : asdfas  \n"
+     ]
+    }
+   ],
    "source": [
     "currentdir = 'C:\\\\Users\\\\azi\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\'\n",
     "# for dirpath, dirname, filename in os.walk(currentdir):\n",
+    "test = \"asdfas\"\n",
+    "print(f\"Current path : {test}  \"  )\n",
     "for dirpath, dirname, filename in os.walk('C:\\\\Users\\\\azi\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\'):\n",
-    "    \n",
     "    print(f\"Current path : {dirpath}  \"  )\n",
-    "#     print(f\"Current dirname : {dirname}\")\n",
-    "#     print(f\"Current filename : {filename}   \" )"
+    "    print(f\"Current dirname : {dirname}\")\n",
+    "    print(f\"Current filename : {filename}   \" )"
    ]
   },
   {
